<resources>
    <string name="app_name">保健品核查助手</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="button_login_label">立即登录</string>
    <string name="login_forget_password">忘记密码？</string>
    <string name="login_modify_password">修改密码</string>
    <string name="login_registe_label">立即注册</string>
    <string name="login_input_phone_number">输入手机号</string>
    <string name="login_input_sms_number">输入验证码</string>
    <string name="login_input_name">输入姓名</string>
    <string name="login_input_position">输入职位</string>
    <string name="login_input_company">输入单位</string>
    <string name="login_choose_address">选择所在地</string>
    <string name="login_input_password">输入密码</string>
    <string name="login_confirm_password">再次确认密码</string>
    <string name="add_attachment_label">添加附件</string>
    <string name="submit_label">提交</string>
    <string name="reset_label">重置操作</string>
    <string name="warn_label">无法执行？</string>
    <string name="login_get_sms_code">获取验证码</string>
    <string name="task_list_title">任务列表</string>
    <string name="main_personal_label">个人中心</string>
    <string name="main_history_task_label">历史任务</string>
    <string name="back_title">返回</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="personal_feedback">意见反馈</string>
    <string name="personal_about_us">关于我们</string>
    <string name="personal_logout">退出登录</string>
    <string name="personal_name_label">姓名：%s</string>
    <string name="personal_phone_label">电话：%s</string>
    <string name="personal_company_label">单位：%s</string>
    <string name="personal_position_label">职位：%s</string>
    <string name="personal_location_label">地址：%s</string>
    <string name="please_input_feedback">请输入内容</string>
    <string name="submit_success_toast">提交成功</string>
    <string name="people_count">被核查人数：%d人</string>
    <string name="current_progress">当前进度：</string>
    <string name="can_not_complete">任务无法完成</string>
    <string name="unfilled">未填写</string>
    <string name="filled">已填写</string>
    <string name="vervifying">审核中</string>
    <string name="vervify_fail">审核失败</string>
    <string name="vervify_success">审核通过</string>
    <string name="leader_info">组长信息:</string>
    <string name="member_info">组员信息：</string>
    <string name="task_name">任务名称：</string>
    <string name="company_name">核查单位</string>
    <string name="task_info">任务介绍</string>
</resources>
