<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.zhengdianfang.healthverifyassistant.views.LoginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/activity_horizontal_margin"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/phoneNumberEdit"
            style="@style/AppTheme.EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:drawableLeft="@drawable/ic_personalcenter"
            android:drawablePadding="8dp"
            android:hint="@string/login_input_phone_number"
            android:inputType="numberSigned"
            android:maxLength="11"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleView" />


        <EditText
            android:id="@+id/smsNumberEdit"
            style="@style/AppTheme.EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:drawableLeft="@drawable/ic_dun"
            android:drawablePadding="8dp"
            android:hint="@string/login_input_sms_number"
            android:inputType="numberSigned"
            android:maxLength="11"
            android:paddingRight="160dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneNumberEdit" />

        <EditText
            android:id="@+id/passwordEdit"
            style="@style/AppTheme.EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="8dp"
            android:hint="@string/login_input_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/smsNumberEdit" />

        <EditText
            android:id="@+id/confirmPasswordEdit"
            style="@style/AppTheme.EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="8dp"
            android:hint="@string/login_confirm_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordEdit" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="64dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="80dp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/titleView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/app_name"
            android:textColor="@color/colorAccent"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/login_modify_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirmPasswordEdit" />


        <TextView
            android:id="@+id/loginTextView"
            style="@style/AppTheme.LabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/button_login_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginButton" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="269dp" />

        <Button
            android:id="@+id/getSmsButton"
            android:layout_width="@dimen/sms_code_button_width"
            android:layout_height="48dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/sms_code_button_background"
            android:text="@string/login_get_sms_code"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/smsNumberEdit"
            app:layout_constraintEnd_toEndOf="@+id/smsNumberEdit"
            app:layout_constraintTop_toTopOf="@+id/smsNumberEdit" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>

