<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zhengdianfang.healthverifyassistant.views.LoginActivity"
    tools:ignore="MissingConstraints">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingVertical="8dp"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <Button
            android:id="@+id/backButton"
            style="@style/AppTheme.ToolbarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="16dp"
            android:layout_gravity="left"
            android:drawableTop="@drawable/ic_back"
            android:text="@string/back_title" />

        <TextView
            style="@style/AppTheme.TitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/personal_feedback" />

    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.CardView
        android:id="@+id/feedbackCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:padding="8dp"
        app:cardBackgroundColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <EditText
            android:id="@+id/versionTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="13"
            android:padding="8dp"
            android:textColorHint="@color/tableHintTextColor"
            android:hint="@string/please_input_feedback"
            android:background="@drawable/transparent"
            android:textColor="@color/tableTextColor"
            android:textSize="20sp"
            android:gravity="top" />
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/submit_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedbackCardView" />
</android.support.constraint.ConstraintLayout>
