<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.zhengdianfang.healthverifyassistant.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingVertical="8dp"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <Button
            android:id="@+id/personalToolbarButton"
            style="@style/AppTheme.ToolbarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:drawableTop="@drawable/ic_personal_center"
            android:text="@string/main_personal_label" />

        <TextView
            style="@style/AppTheme.TitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/task_list_title" />

        <Button
            android:id="@+id/historyToolbarButton"
            style="@style/AppTheme.ToolbarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:drawableTop="@drawable/ic_task_list"
            android:text="@string/main_history_task_label" />

    </android.support.v7.widget.Toolbar>

    <fragment
        android:id="@+id/taskListFragment"
        android:name="com.zhengdianfang.healthverifyassistant.views.TaskListFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>
