<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="32dp"
        tools:context="com.zhengdianfang.healthverifyassistant.views.LoginActivity"
        tools:ignore="MissingConstraints">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="64dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="80dp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/titleView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/app_name"
            android:textColor="@color/colorAccent"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline" />


        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="269dp" />

        <TextView
            android:id="@+id/nameTextView"
            style="@style/AppTheme.PersonalLabelStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="80dp"
            android:drawableLeft="@drawable/ic_personalcenter"
            android:drawableTint="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleView"
            tools:text="vtk qk " />

        <TextView
            android:id="@+id/phoneNumberTextView"
            style="@style/AppTheme.PersonalLabelStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:drawableLeft="@drawable/ic_phone"
            android:drawableTint="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameTextView"
            tools:text="vtk qk " />

        <TextView
            android:id="@+id/companyTextView"
            style="@style/AppTheme.PersonalLabelStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="48dp"
            android:drawableLeft="@drawable/ic_company"
            android:drawableTint="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneNumberTextView"
            tools:text="vtk qk " />

        <TextView
            android:id="@+id/positionTextView"
            style="@style/AppTheme.PersonalLabelStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:drawableLeft="@drawable/ic_position"
            android:drawableTint="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/companyTextView"
            tools:text="vtk qk " />

        <TextView
            android:id="@+id/addressTextView"
            style="@style/AppTheme.PersonalLabelStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:drawableLeft="@drawable/ic_location"
            android:drawableTint="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/positionTextView"
            tools:text="vtk qk " />


        <Button
            android:id="@+id/feedbackButton"
            style="@style/AppTheme.PersonalButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="80dp"
            android:drawableLeft="@drawable/ic_feedback"
            android:text="@string/personal_feedback"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addressTextView" />

        <Button
            android:id="@+id/aboutUsButton"
            style="@style/AppTheme.PersonalButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_info"
            android:text="@string/personal_about_us"
            app:layout_constraintEnd_toEndOf="@+id/feedbackButton"
            app:layout_constraintTop_toBottomOf="@+id/feedbackButton" />

        <Button
            android:id="@+id/logoutButton"
            style="@style/AppTheme.PersonalButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:drawableLeft="@drawable/ic_shutdown"
            android:text="@string/personal_logout"
            app:layout_constraintEnd_toEndOf="@+id/feedbackButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/aboutUsButton" />
    </android.support.constraint.ConstraintLayout>

</ScrollView>

